svc_deploy_blog.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-blog
  namespace: keduit
spec:
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 80
---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: keduit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: jiho9898/portal:blog
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m

        ports:
        - containerPort: 80
        volumeMounts:
          - name: indexcmvol
            mountPath: /usr/share/nginx/html/desc
      volumes:
      - name: indexcmvol
        configMap:
          name: indexcm
      imagePullSecrets:
      - name: dockerlog
