svc_deploy_error.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-error
  namespace: keduit
spec:
  selector:
    app: error
  ports:
  - port: 80
    targetPort: 80
---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error
  namespace: keduit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error
  template:
    metadata:
      labels:
        app: error
    spec:
      containers:
      - name: error
        image: brian24/portal:etc
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m


        ports:
        - containerPort: 80
