svc_deploy_main.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-main
  namespace: keduit
spec:
  selector:
    app: main
  ports:
  - port: 80
    targetPort: 80
---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  namespace: keduit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: jiho9898/portal:main
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m

        ports:
        - containerPort: 80

      imagePullSecrets:
      - name: dockerlog
